--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: PaperTweaks
-          path: |
-            PaperTweaks.jar
+          path: build/libs/*.jar
